--- a/src/functions/test/index.yml
+++ b/src/functions/test/index.yml
@@ -1,3 +1,3 @@
-onConnectWS:
-  handler: src/functions/onConnectWS/index.main
+test:
+  handler: src/functions/test/index.main
   environment: ${file(ymls/env.yml):${self:provider.stage}}
